[project]
name = "zero-sum"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "goose3>=3.1.19",
    "pydantic>=2.9.2",
    "pytube>=15.0.0",
    "tiktoken>=0.7.0",
    "youtube-transcript-api>=0.6.2",
    "zero-gpt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
zero-gpt = { git = "https://github.com/Zerocrossing/zero-gpt.git" }
